[🎨Modify]: cart.hrml 상품 리스트 image, product_name a태그 링크 수정
cart.html
- 상품 리스트 image, product_name 클릭 시 detail 페이지로 이동

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -93,10 +93,10 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#">
+                      <a href="/src/pages/productDetail/productDetail.html">
                         <img src="https://via.placeholder.com/60x78" alt="풀무원 탱탱쫄면 (4개입)" class="mr-5"/>
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/productDetail.html" class="product_name">
                         <span class="block mr-5 w-345pxr">[풀무원] 탱탱쫄면 (4개입)</span>
                       </a>
                       <div class="option_count">
@@ -126,10 +126,10 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#">
+                      <a href="/src/pages/productDetail/productDetail.html">
                         <img src="https://via.placeholder.com/60x78" alt="풀무원 탱탱쫄면 (4개입)" class="mr-5"/>
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/productDetail.html" class="product_name">
                         <span class="block mr-5 w-345pxr">[풀무원] 탱탱쫄면 (4개입)</span>
                       </a>
                       <div class="option_count">
@@ -177,10 +177,10 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#">
+                      <a href="/src/pages/productDetail/productDetail.html">
                         <img src="https://via.placeholder.com/60x78" alt="풀무원 탱탱쫄면 (4개입)" class="mr-5" />
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/productDetail.html" class="product_name">
                         <span class="block mr-5 w-345pxr">[풀무원] 탱탱쫄면 (4개입)</span>
                       </a>
                       <div class="option_count">
@@ -228,10 +228,10 @@
                           <span class="sr-only">목록 선택</span>
                         </label>
                       </fieldset>
-                      <a href="#" class="product_image">
+                      <a href="/src/pages/productDetail/productDetail.html" class="product_image">
                         <img src="https://via.placeholder.com/60x78" alt="풀무원 탱탱쫄면 (4개입)" class="mr-5" />
                       </a>
-                      <a href="#" class="product_name">
+                      <a href="/src/pages/productDetail/productDetail.html" class="product_name">
                         <span class="block mr-5 w-345pxr">[풀무원] 탱탱쫄면 (4개입)</span>
                       </a>
                       <div class="option_count">
