[🎨Modify]: a 요소 경로 수정

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -133,7 +133,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -159,7 +159,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -185,7 +185,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -211,7 +211,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -237,7 +237,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -263,7 +263,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -289,7 +289,7 @@
             <li
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
-              <a href="상품디테일">
+              <a href="/src/pages/productDetail/">
                 <img src="./public/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
@@ -325,9 +325,7 @@
               </svg>
             </div>
 
-            <div class="absolute swiper2-button-next">
-              <img src="" alt="" />
-            </div>
+            <div class="absolute swiper2-button-next"></div>
           </div>
         </div>
       </section>
