--- a/src/pages/productList/index.html
+++ b/src/pages/productList/index.html
@@ -59,7 +59,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -84,7 +84,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -109,7 +109,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -134,7 +134,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -159,7 +159,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -184,7 +184,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -209,7 +209,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -234,7 +234,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -259,7 +259,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -284,7 +284,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -309,7 +309,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
@@ -334,7 +334,7 @@
               <li
                 class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
               >
-                <a href="../productDetail/productDetail.html">
+                <a href="/src/pages/productDetail/">
                   <img src="/public/banner/image-sample-for-test.jpg" alt="" />
                 </a>
                 <button class="mt-6pxr" type="button">
