[🎨Modify]: header에 cart 경로 추가

--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -37,12 +37,11 @@
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <script src="../../js/include.js"></script>
+    <script type="module" src="../../js/include.js"></script>
     <!-- <script src="../../components/header/header.js"></script> -->
   </head>
   <body>
-    <header id="header" class="shadow-md"></header>
-
+    <header id="header"></header>
     <!-- cart page -->
     <main class="cart_page">
       <section class="cart w1050 pb-80pxr">
