[📑Docs]: 파일 이름 수정

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -43,7 +43,7 @@
     <header id="header"></header>
 
     <!-- Container -->
-    <main class="mt-12">
+    <main class="mt-12 pb-24">
       <h1 class="sr-only">상품 디테일 페이지</h1>
       <!-- product_info -->
       <section class="w-[1050px] mx-auto mt-0 mb-12">
