[🎨Modify]: 이미지 경로에 /public 삭제

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           >
             <img
               class="object-cover w-full"
-              src="./public/banner/banner05.png"
+              src="/banner/banner05.png"
               alt="컬리 장보기의 특권 이주의 특가 한 눈에 보기"
             />
           </div>
@@ -61,7 +61,7 @@
           >
             <img
               class="object-cover w-full"
-              src="./public/banner/banner02.png"
+              src="/banner/banner02.png"
               alt="한 눈에 보는 카드 혜택"
             />
           </div>
@@ -70,7 +70,7 @@
           >
             <img
               class="object-cover w-full"
-              src="./public/banner/banner03.png"
+              src="/banner/banner03.png"
               alt="컬리 퍼플 위크"
             />
           </div>
@@ -79,7 +79,7 @@
           >
             <img
               class="object-cover w-full"
-              src="./public/banner/banner01.png"
+              src="/banner/banner01.png"
               alt="부드러운 달콤함, 컬리 과일가게, 앵콜 특가 멜론 9900원"
             />
           </div>
@@ -93,8 +93,14 @@
         <div
           class="absolute hidden transition-opacity duration-500 left-300pxr botton-800pxr swiper-button-prev"
         >
-
-            <use href="./public/icon/_sprite.svg#Arrow_slide" />
+          <svg
+            class="rotate-180"
+            role="image"
+            width="60"
+            height="60"
+            viewBox="0 0 52 52"
+          >
+            <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
         <div
@@ -118,10 +124,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -144,10 +150,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -170,10 +176,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -196,10 +202,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -222,10 +228,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -248,10 +254,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -274,10 +280,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -300,10 +306,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -332,7 +338,7 @@
           class="absolute z-10 bottom-330pxr right-495pxr swiper2-button-prev"
         >
           <svg role="image" width="60" height="60" viewBox="0 0 52 52">
-            <use href="./public/icon/_sprite.svg#Arrow_slide" />
+            <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
 
@@ -346,13 +352,13 @@
             height="60"
             viewBox="0 0 52 52"
           >
-            <use href="./public/icon/_sprite.svg#Arrow_slide" />
+            <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
       </div>
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
-        <img src="./public/banner/line-banner 1.png" alt="" />
+        <img src="/banner/line-banner 1.png" alt="" />
       </a>
 
       <!-- product slide 2번째 -->
@@ -372,10 +378,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -398,10 +404,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -424,10 +430,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -450,10 +456,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -476,10 +482,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -502,10 +508,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -528,10 +534,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -554,10 +560,10 @@
               class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
             >
               <a href="/src/pages/productDetail/">
-                <img src="./public/banner/image-sample-for-test.jpg" alt="" />
+                <img src="/banner/image-sample-for-test.jpg" alt="" />
               </a>
               <button class="mt-6pxr" type="button">
-                <img src="./public/banner/add cart button.png" alt="" />
+                <img src="/banner/add cart button.png" alt="" />
               </button>
               <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
                 >사장님도 포기한 맛</span
@@ -586,7 +592,7 @@
           class="absolute z-10 bottom-330pxr right-495pxr swiper3-button-prev"
         >
           <svg role="image" width="60" height="60" viewBox="0 0 52 52">
-            <use href="./public/icon/_sprite.svg#Arrow_slide" />
+            <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
 
@@ -600,13 +606,13 @@
             height="60"
             viewBox="0 0 52 52"
           >
-            <use href="./public/icon/_sprite.svg#Arrow_slide" />
+            <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
       </div>
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
-        <img src="./public/banner/line-banner 1.png" alt="" />
+        <img src="/banner/line-banner 1.png" alt="" />
       </a>
     </main>
     <footer id="footer"></footer>
