--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -134,11 +134,19 @@
                     </div>
                     <div>
                       <button
-                        class="block text-center bg-white border rounded w-333pxr h-44pxr px-10pxr text-primary border-primary"
+                        class="bg-white border rounded flex_center w-333pxr h-44pxr px-10pxr text-primary border-primary"
                         id="address_find"
                         type="button"
                       >
-                        주소 검색
+                        <svg
+                          role="img"
+                          width="36"
+                          height="36"
+                          viewBox="0 0 36 36"
+                        >
+                          <use href="/icon/_sprite.svg#Search" />
+                        </svg>
+                        <span>주소 검색</span>
                       </button>
                       <p class="mt-1 text-sm">
                         배송지에 따라 상품 정보가 달라질 수 있습니다.
@@ -215,77 +223,87 @@
               </fieldset>
 
               <!-- 이용약관 동의 -->
-              <fieldset
-                class="inline-flex w-full px-5 border-t border-t-black py-20pxr"
-              >
+              <fieldset class="border-t border-t-black">
                 <legend class="sr-only">이용약관동의</legend>
-                <div class="justify-start w-139pxr">
-                  이용 약관 동의<span class="text-info-error">*</span>
-                </div>
-                <!-- 이용 약관 체크 박스 -->
-                <ul class="flex flex-col justify-start">
-                  <li class="flex">
-                    <input type="checkbox" id="all" class="input_check peer" />
-                    <label for="all" class="label_check">
-                      전체 동의합니다.
-                      <p class="text-xs">
+                <div class="inline-flex w-full px-5 py-20pxr">
+                  <!-- 이용 약관 체크 박스 -->
+                  <div class="justify-start w-139pxr">
+                    이용 약관 동의<span class="text-info-error">*</span>
+                  </div>
+                  <ul class="flex-grow flex-shrink w-461pxr basis-0">
+                    <li class="flex flex-col items-start">
+                      <div>
+                        <input
+                          type="checkbox"
+                          id="all"
+                          class="input_check peer"
+                        />
+                        <label
+                          for="all"
+                          class="text-lg font-medium label_check"
+                        >
+                          <span>전체 동의합니다.</span>
+                        </label>
+                      </div>
+                      <p class="pt-1 text-xs pl-9">
                         선택항목에 동의하지 않은 경우도 회원가입 및 일반적인
                         서비스를 이용할 수 있습니다.
                       </p>
-                    </label>
-                  </li>
-                  <li class="flex">
-                    <input
-                      type="checkbox"
-                      id="essential1"
-                      class="input_check peer"
-                    />
-                    <label for="essential1" class="label_check">
-                      이용약관 동의 (필수)
-                    </label>
-                    <div class="right_arrow">약관보기</div>
-                  </li>
-                  <li class="flex">
-                    <div>
-                      <input
-                        type="checkbox"
-                        id="essential2"
-                        class="input_check peer"
-                      />
-                      <label for="essential2" class="label_check">
-                        개인정보 수집 · 이용 동의 (필수)
-                      </label>
-                    </div>
-                    <div class="right_arrow">약관보기</div>
-                  </li>
-                  <li class="flex">
-                    <div>
-                      <input
-                        type="checkbox"
-                        id="choice1"
-                        class="input_check peer"
-                      />
-                      <label for="choice1" class="label_check">
-                        무료배송, 할인쿠폰 등 혜택/정보 수신 동의 (선택)
-                      </label>
-                    </div>
-                    <div class="right_arrow">약관보기</div>
-                  </li>
-                  <li class="flex">
-                    <div>
-                      <input
-                        type="checkbox"
-                        id="choice2"
-                        class="input_check peer"
-                      />
-                      <label for="choice2" class="label_check">
-                        본인은 만 14세 이상입니다. (필수)
-                      </label>
-                    </div>
-                    <div class="right_arrow">약관보기</div>
-                  </li>
-                </ul>
-                <!-- 이용 약관 체크 박스 -->
+                    </li>
+                    <li class="flex_between">
+                      <div>
+                        <input
+                          type="checkbox"
+                          id="essential1"
+                          class="input_check peer"
+                        />
+                        <label for="essential1" class="label_check">
+                          이용약관 동의 (필수)
+                        </label>
+                      </div>
+                      <div class="right_arrow">약관보기</div>
+                    </li>
+                    <li class="flex_between">
+                      <div>
+                        <input
+                          type="checkbox"
+                          id="essential2"
+                          class="input_check peer"
+                        />
+                        <label for="essential2" class="label_check">
+                          개인정보 수집 · 이용 동의 (필수)
+                        </label>
+                      </div>
+                      <div class="right_arrow">약관보기</div>
+                    </li>
+                    <li class="flex_between">
+                      <div>
+                        <input
+                          type="checkbox"
+                          id="choice1"
+                          class="input_check peer"
+                        />
+                        <label for="choice1" class="label_check">
+                          무료배송, 할인쿠폰 등 혜택/정보 수신 동의 (선택)
+                        </label>
+                      </div>
+                      <div class="right_arrow">약관보기</div>
+                    </li>
+                    <li class="flex_between">
+                      <div>
+                        <input
+                          type="checkbox"
+                          id="choice2"
+                          class="input_check peer"
+                        />
+                        <label for="choice2" class="label_check">
+                          본인은 만 14세 이상입니다. (필수)
+                        </label>
+                      </div>
+                      <div class="right_arrow">약관보기</div>
+                    </li>
+                  </ul>
+                </div>
               </fieldset>
 
               <!-- 가입하기 버튼 -->
